# bayestar

./: CMakeLists.txt  README.txt  config-example.txt  recompile.sh
src/: affine_sampler.h  bayestar_config.h  binner.h  chain.cpp  chain.h  gaussian_process.h  gp.cpp  los_sampler.cpp  model.cpp  star_exact.cpp
